...
    android:id="@+id/topNavHandleId"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/webViewConstraint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/bgColor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
...
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ContentDescription,HardcodedText,RtlHardcoded,UsingOnClickInXml" />

        <TextView
            android:id="@+id/webViewTitleId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:lineHeight="20sp"
            android:scaleType="fitXY"
...
