...
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription,HardcodedText,RtlHardcoded,UsingOnClickInXml" />


    <TextView
            android:id="@+id/signUpTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:lineHeight="@dimen/signUp_title_height"
            android:padding="15dp"
            android:text="@string/signUp_heading"
...
            android:textFontWeight="700"
            android:textSize="@dimen/signUp_title_size"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/signUpMobileId"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginHorizontal="15dp"
            android:backgroundTint="@color/postSectionCardBgColor"
            android:drawableLeft="@drawable/baseline_local_phone_24"
            android:gravity="center"
...
