<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.exoplayer2.ui.StyledPlayerView
        android:id="@+id/playerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:repeat_toggle_modes="one"
        app:resize_mode="zoom"
        app:use_controller="false" />

    <FrameLayout
        android:id="@+id/playerViewFrameLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <include
        android:id="@+id/video_info_layout"
        layout="@layout/video_info_layout"
        android:layout_width="@dimen/zero"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/barrier_cta"
        app:layout_constraintEnd_toStartOf="@id/video_cta_layout"
        app:layout_constraintStart_toStartOf="parent" />

    <include
        android:id="@+id/video_cta_layout"
        layout="@layout/video_cta_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/barrier_cta"
        app:layout_constraintEnd_toEndOf="parent" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier_cta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="top"
        app:constraint_referenced_ids="button_learn, button_try" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_learn"
        style="@style/button"
        android:layout_width="@dimen/spacing_zero"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/spacing_s"
        android:layout_marginEnd="@dimen/spacing_xxs"
        android:layout_marginBottom="@dimen/spacing_s"
        android:text="@string/learn_it_button_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/guideCenter"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_try"
        style="@style/button"
        android:layout_width="@dimen/spacing_zero"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/spacing_xxs"
        android:layout_marginEnd="@dimen/spacing_s"
        android:layout_marginBottom="@dimen/spacing_s"
        android:text="@string/try_it_button_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/guideCenter" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideCenter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

</androidx.constraintlayout.widget.ConstraintLayout>
