<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/iv_challenge_type"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginStart="@dimen/spacing_s"
        android:layout_marginBottom="@dimen/spacing_s"
        android:importantForAccessibility="no"
        app:layout_constraintBottom_toTopOf="@id/tv_user_name"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_user_name"
        style="@style/text.small"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/spacing_s"
        android:layout_marginEnd="@dimen/spacing_larger"
        android:layout_marginBottom="@dimen/spacing_s"
        android:text="@string/app_name"
        android:textSize="@dimen/size_l"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/tv_video_description" />

    <com.aop.interplay.custom_views.truncatingtextview.TruncatingTextView
        android:id="@+id/tv_video_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/spacing_s"
        android:layout_marginEnd="@dimen/spacing_larger"
        android:layout_marginBottom="@dimen/spacing_s"
        android:text="@string/home_screen_title1"
        android:textColor="@color/white"
        android:textSize="@dimen/size_l"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>